--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "notification"
   ],
   "author": "Maximilian Weber",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "http-server": "^0.9.0"
+  }
 }
