--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "http-server": "^0.9.0"
+  },
+  "optionalDependencies": {
+    "notifyjs": "^3.0.0"
   }
 }
