--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Maximilian Weber",
   "license": "ISC",
   "dependencies": {
-    "nodejs-websocket": "^1.7.1"
+    "websocket": "^1.0.28",
+    "ws": "6.1.0"
   }
 }
